# eov

./: .gitignore  Cargo.toml  README.md  build-flatpak.yml  data-guide.md  release-appimage.yml  release-flatpak.yml
.github/workflows/: build-appimage.yml  build-flatpak.yml  build-macos-app.yml  build-windows-zip.yml  ci.yml  release-appimage.yml  release-flatpak.yml  release-windows-zip.yml  release.yml
app/: Cargo.toml  build.rs
app/src/: backend.rs  blitter.rs  callbacks.rs  cli.rs  clipboard.rs  config.rs  extension_host.rs  file_ops.rs  gpu.rs  gpu_interop.rs  main.rs  pane_ui.rs  plugin_host.rs  render.rs  render_pool.rs  stain.rs  state.rs  tile_loader.rs  tools.rs  ui_update.rs  viewport_filter.rs
app/src/plugins/: discovery.rs  host_context.rs  manager.rs  mod.rs  registry.rs  toolbar.rs
app/ui/: app-window.slint  dataset-export-dialog.slint  export-dialog.slint  home-screen.slint  hud-settings.slint  hud-toolbar.slint  panes.slint  tab-controls.slint  theme.slint  types.slint  viewport.slint  window-toolbar.slint
assets/linux/: COPYING.third-party  io.eosin.eov.desktop  io.eosin.eov.metainfo.xml
assets/linux/licenses/: LGPL-2.1.txt
assets/macos/: Info.plist  eov.icns
common/: Cargo.toml
common/benches/: wsi_benchmarks.rs
common/src/: blitter.rs  cache.rs  error.rs  export.rs  formatting.rs  imaging.rs  lib.rs  overlay.rs  postprocess.rs  render.rs  stain.rs  tile.rs  viewport.rs  wsi.rs
common/src/dataset/: config.rs  discovery.rs  metadata.rs  mod.rs  output.rs  pipeline.rs
example_plugin/src/: lib.rs
example_plugin_python/ui/: my_panel.slint
example_plugins/example_python/: plugin.py  plugin.toml
example_plugins/example_rust/: Cargo.toml  plugin.toml
example_plugins/example_rust/src/: event_log.rs  lib.rs
example_plugins/example_rust/ui/: my_panel.slint
example_plugins/grayscale_python/: plugin.py  plugin.toml  requirements.txt
example_plugins/grayscale_rust/: Cargo.toml  plugin.toml
example_plugins/grayscale_rust/shaders/: grayscale.comp  grayscale.comp.spv
example_plugins/grayscale_rust/src/: lib.rs
packaging/: screenshot.sh
packaging/appimage/: AppRun  README.md  build.sh
packaging/flatpak/: .gitignore  README.md  build.sh  io.eosin.eov.yml
packaging/macos/: README.md  build.sh
plugin_api/python/: eov_extension.desc  eov_plugin_host.py  pyproject.toml
plugin_api/src/: ffi.rs  host.rs  lib.rs  manifest.rs  viewport_filter.rs
proto/: eov_extension.proto
scripts/: fmt.sh  generate-python-plugin-descriptor.sh  run-with-example-plugin.sh  run-with-example-plugins.sh
