[workspace]
members = ["common", "app", "plugin_api", "example_plugins/example_rust", "example_plugins/grayscale_rust"]
resolver = "3"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "macros"] }
# Error handling
anyhow = "1"
thiserror = "2"
# Logging
tracing = "0.1"
# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Thread-safe primitives
parking_lot = "0.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
