[package]
name = "app"
version = "0.2.8"
edition = "2024"
authors = ["Thomas Havlik <me@thavlik.dev>"]
license = "MIT OR Apache-2.0"
description = "Main application for the EOV project, providing a Slint user interface and integrating various functionalities from the common crate."
keywords = ["application", "gui", "tool", "wsi", "biology", "pathology"]
homepage = "https://github.com/eosin-platform/eov"
publish = false

[[bin]]
name = "eov"
path = "src/main.rs"

[dependencies]
# Common crate
common = { path = "../common" }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Slint UI
slint = { version = "1.15.1", features = ["backend-winit", "renderer-femtovg-wgpu", "unstable-wgpu-28", "unstable-winit-030"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "macros"] }

# Image handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File dialogs
rfd = "0.15"

# Thread-safe state
parking_lot = "0.12"

# Concurrent data structures
crossbeam-channel = "0.5"
dashmap = "6"
rayon = "1.10"

# Clipboard
arboard = "3"

# Process management (for Open Containing Folder)
open = "5"

# Config directory access
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# GPU vertex buffer casting
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[build-dependencies]
slint-build = "1.15.1"
