[package]
name = "common"
version = "0.1.21"
edition = "2024"
authors = ["Thomas Havlik <me@thavlik.dev>"]
license = "MIT OR Apache-2.0"
description = "Common utilities and abstractions for the EOV project, including WSI handling, image processing, caching, and math utilities."
keywords = ["wsi", "biology", "pathology"]
homepage = "https://github.com/eosin-platform/eov"
publish = false

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
# WSI file handling
openslide-rs = "0.2"
# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Async runtime for background loading
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs"] }
# Thread-safe caching
dashmap = "6"
lru = "0.12"
parking_lot = "0.12"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
# Math utilities
glam = "0.30"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []

[[bench]]
name = "wsi_benchmarks"
harness = false
