[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eov-plugin-host"
version = "0.1.0"
description = "Python helper for the EOV extension host API"
requires-python = ">=3.10"
dependencies = [
  "grpcio",
  "protobuf",
]

[tool.setuptools]
py-modules = ["eov_plugin_host"]

[tool.setuptools.package-data]
"*" = ["*.desc"]